{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 69,
  "lineage": "0b4728c2-b2d7-c685-585f-46e1bfbb2a48",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05383c01e1fa069cb",
            "association_id": "eipassoc-03f56377d24e573d4",
            "domain": "vpc",
            "id": "eipalloc-05383c01e1fa069cb",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c4a646b84fbb666d",
            "private_dns": "ip-10-0-101-254.us-west-2.compute.internal",
            "private_ip": "10.0.101.254",
            "public_dns": "ec2-44-238-59-99.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.59.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2a",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2a",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0315aec8ff72e9c29",
            "association_id": "eipassoc-0fedc78d3b2a392b9",
            "domain": "vpc",
            "id": "eipalloc-0315aec8ff72e9c29",
            "network_border_group": "us-west-2",
            "network_interface": "eni-05871c470ec09e42c",
            "private_dns": "ip-10-0-102-17.us-west-2.compute.internal",
            "private_ip": "10.0.102.17",
            "public_dns": "ec2-54-68-7-72.us-west-2.compute.amazonaws.com",
            "public_ip": "54.68.7.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2b",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2b",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01afb256f980d9adc",
            "association_id": "eipassoc-08af1d8e8a64c2ff6",
            "domain": "vpc",
            "id": "eipalloc-01afb256f980d9adc",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ade05b01d38a4dbc",
            "private_dns": "ip-10-0-103-8.us-west-2.compute.internal",
            "private_ip": "10.0.103.8",
            "public_dns": "ec2-52-32-213-165.us-west-2.compute.amazonaws.com",
            "public_ip": "52.32.213.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2c",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2c",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:internet-gateway/igw-0b7387016f2d33bee",
            "id": "igw-0b7387016f2d33bee",
            "owner_id": "841332867767",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05383c01e1fa069cb",
            "connectivity_type": "public",
            "id": "nat-0fb2f59b1540b10d6",
            "network_interface_id": "eni-0c4a646b84fbb666d",
            "private_ip": "10.0.101.254",
            "public_ip": "44.238.59.99",
            "subnet_id": "subnet-08cdbc78cf693c53f",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2a",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2a",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0315aec8ff72e9c29",
            "connectivity_type": "public",
            "id": "nat-0c621f2c61a0c398c",
            "network_interface_id": "eni-05871c470ec09e42c",
            "private_ip": "10.0.102.17",
            "public_ip": "54.68.7.72",
            "subnet_id": "subnet-0d7892fd2ced19fb5",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2b",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2b",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01afb256f980d9adc",
            "connectivity_type": "public",
            "id": "nat-0049a5e404c77f52d",
            "network_interface_id": "eni-0ade05b01d38a4dbc",
            "private_ip": "10.0.103.8",
            "public_ip": "52.32.213.165",
            "subnet_id": "subnet-0f29032fca574784b",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2c",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-us-west-2c",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06687252bd902f6be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fb2f59b1540b10d6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06687252bd902f6be",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07888ba912ad6037a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c621f2c61a0c398c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07888ba912ad6037a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b9ed35fb03bc244a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0049a5e404c77f52d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b9ed35fb03bc244a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b7387016f2d33bee",
            "id": "r-rtb-0d115e5ea1c8964e11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d115e5ea1c8964e1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:route-table/rtb-032d402d9560ed2a9",
            "id": "rtb-032d402d9560ed2a9",
            "owner_id": "841332867767",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-intra",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-intra",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:route-table/rtb-06687252bd902f6be",
            "id": "rtb-06687252bd902f6be",
            "owner_id": "841332867767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fb2f59b1540b10d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2a",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2a",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:route-table/rtb-07888ba912ad6037a",
            "id": "rtb-07888ba912ad6037a",
            "owner_id": "841332867767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c621f2c61a0c398c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2b",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2b",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:route-table/rtb-0b9ed35fb03bc244a",
            "id": "rtb-0b9ed35fb03bc244a",
            "owner_id": "841332867767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0049a5e404c77f52d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2c",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2c",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:route-table/rtb-0d115e5ea1c8964e1",
            "id": "rtb-0d115e5ea1c8964e1",
            "owner_id": "841332867767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7387016f2d33bee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-public",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-public",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0441063358a80884e",
            "route_table_id": "rtb-032d402d9560ed2a9",
            "subnet_id": "subnet-09db7e80fc698035a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d698e9971f69850",
            "route_table_id": "rtb-032d402d9560ed2a9",
            "subnet_id": "subnet-07bf38295f7ad580b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1b08a15122d8634",
            "route_table_id": "rtb-032d402d9560ed2a9",
            "subnet_id": "subnet-0ddc4195da5e65655"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c62dc120d8a5f511",
            "route_table_id": "rtb-06687252bd902f6be",
            "subnet_id": "subnet-0d901996c452091fd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e7dde16575e889a",
            "route_table_id": "rtb-07888ba912ad6037a",
            "subnet_id": "subnet-07c5ec9f9107971ce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08555344c36120ff0",
            "route_table_id": "rtb-0b9ed35fb03bc244a",
            "subnet_id": "subnet-01f5e994b385343af"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d24ce8ada0e62a5e",
            "route_table_id": "rtb-0d115e5ea1c8964e1",
            "subnet_id": "subnet-08cdbc78cf693c53f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d4ccf9583128cc9",
            "route_table_id": "rtb-0d115e5ea1c8964e1",
            "subnet_id": "subnet-0d7892fd2ced19fb5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ec0923347a862e3",
            "route_table_id": "rtb-0d115e5ea1c8964e1",
            "subnet_id": "subnet-0f29032fca574784b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:subnet/subnet-09db7e80fc698035a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09db7e80fc698035a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841332867767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-intra-us-west-2a",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-intra-us-west-2a",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:subnet/subnet-07bf38295f7ad580b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bf38295f7ad580b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841332867767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-intra-us-west-2b",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-intra-us-west-2b",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:subnet/subnet-0ddc4195da5e65655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.53.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddc4195da5e65655",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841332867767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-intra-us-west-2c",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-intra-us-west-2c",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:subnet/subnet-0d901996c452091fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d901996c452091fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841332867767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:subnet/subnet-07c5ec9f9107971ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c5ec9f9107971ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841332867767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:subnet/subnet-01f5e994b385343af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f5e994b385343af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841332867767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-private-us-west-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:subnet/subnet-08cdbc78cf693c53f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cdbc78cf693c53f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841332867767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-public-us-west-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/elb": "1",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-public-us-west-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/elb": "1",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:subnet/subnet-0d7892fd2ced19fb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7892fd2ced19fb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841332867767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-public-us-west-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/elb": "1",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-public-us-west-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/elb": "1",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:subnet/subnet-0f29032fca574784b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f29032fca574784b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841332867767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-public-us-west-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/elb": "1",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba-public-us-west-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/Terraform-vpc-prueba": "shared",
              "kubernetes.io/role/elb": "1",
              "project_name": "Terraform-vpc"
            },
            "vpc_id": "vpc-0296ea937535c8e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:841332867767:vpc/vpc-0296ea937535c8e08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f487e8ec980929c",
            "default_route_table_id": "rtb-02ced229bfec52bac",
            "default_security_group_id": "sg-044f6aadf71003643",
            "dhcp_options_id": "dopt-062710c53c0b1e433",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0296ea937535c8e08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ced229bfec52bac",
            "owner_id": "841332867767",
            "tags": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            },
            "tags_all": {
              "Environment": "prueba",
              "Name": "Terraform-vpc-prueba",
              "Terraform": "true",
              "project_name": "Terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}